trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,9 +25,9 @@ body{
     border: 5px solid #ffd1dc;
 
     @media only screen and (max-width: 640px) {
-		font-size: 8px;
-        width: 10%;
-        height: 10px;
+		font-size: 17px;
+        width: 15%;
+        height: 20px;
 	}
     
 }
@@ -50,9 +50,9 @@ button{
     position: relative;
 
     @media only screen and (max-width: 640px) {
-		font-size: 6px;
-        width: 10%;
-        height: 20px;
+		font-size: 5px;
+        width: 14%;
+        height: 30px;
         font-weight: 1000;
 	}
 
